
0.4.0
=====

* FEATURE: Add support for Mediawiki templates (see 
  http://meta.wikimedia.org/wiki/Help:Templates).
* FEATURE: Replace file persistency mode with an embedded version of the
  HSQL database.
* FEATURE: Require admin user login to perform an upgrade.
* FEATURE: Add additional support for the DB2/400 database.
* FEATURE: Remove ability to automatically upgrade from JAMWiki versions
  prior to 0.2.0.
* FEATURE: Remove Special:AllTopics; it was replaced by Special:Allpages
  in JAMWiki 0.3.0.
* FEATURE: Change default logo to submission from Oliver (okohll).
* FEATURE: Updated Hungarian translations from Daniel Tar (bDaneE).

0.3.6
=====

* BUG: Fix setup.jsp typo that caused compile errors.
* FEATURE: Updated Hungarian translations from Daniel Tar (bDaneE).
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).
* FEATURE: Updated Chinese translations from ewen0930.
* FEATURE: Added French translations from Henri Gomez (hgomez).

0.3.5
=====

* FEATURE: Add support for topics of the form "Topic/Subtopic".
* FEATURE: Support for interwiki links ([[Wikipedia:Main Page]]).
* FEATURE: Re-engineer link handling to simplify the code.
* FEATURE: Add pagination support.
* BUG: Fix error on Special:Categories when in file persistency mode.
* BUG: Allow signatures in image captions.
* FEATURE: Use the file system, not RAM, when rebuilding search index.
* FEATURE: Remove VQWiki parser - unsupported.
* FEATURE: Simplify the parser by removing the pre-save parser.
* FEATURE: Remove ability to upgrade from JAMWiki versions prior to 0.1.0.
* FEATURE: Add ANT target for building Javadoc.
* BUG: Table of contents should be enabled by default.
* FEATURE: Add experimental support for the DB2, DB2/400 and MSSQL databases.
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).
* FEATURE: Updated German translations from Axel Kramer (axelclk).

0.3.4
=====

* FEATURE: Make signature patterns configurable.