@@ -6,6 +6,7 @@ admin.action.remove=Remove Marked
 admin.action.save=Save Changes
 admin.caption.allowhtml=Allow HTML
 admin.caption.allowjavascript=Allow Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC driver class
 admin.caption.databasepass=Database Password
 admin.caption.databasetype=Database type
