@@ -5,6 +5,7 @@ admin.action.remove=Fjern markerede
 admin.action.save=Gem \u00E6ndringer
 admin.caption.allowhtml=Tillad HTML
 admin.caption.allowjavascript=Tillad Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC driver class
 admin.caption.databasepass=Database kodeord
 admin.caption.databasetype=Database type
