@@ -5,6 +5,7 @@ admin.action.remove=Markierte entfernen
 admin.action.save=\u00C4nderungen speichern
 admin.caption.allowhtml=Erlaube HTML
 admin.caption.allowjavascript=Erlaube Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC Treiber Klasse
 admin.caption.databasepass=Datenbank-Passwort
 admin.caption.databasetype=Datenbanktyp
