@@ -6,6 +6,7 @@ admin.action.remove=Eliminar Marcados
 admin.action.save=Salvar Cambios
 admin.caption.allowhtml=Permitir HTML
 admin.caption.allowjavascript=Allow Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=clase del controlador JDBC
 admin.caption.databasepass=Contrase\u00f1a de la base de datos
 admin.caption.databasetype=Tipo de base de datos
