@@ -6,6 +6,7 @@ admin.action.remove=Retirer les sujets coch\u00e9s
 admin.action.save=Sauver les modifications
 admin.caption.allowhtml=Accepter le HTML
 admin.caption.allowjavascript=Autoris\u00e9 le Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=Classe du driver JDBC
 admin.caption.databasepass=Mot de passe de la base de donn\u00e9es
 admin.caption.databasetype=Type de la base de donn\u00e9es
