@@ -5,6 +5,7 @@ admin.action.remove=Kijel\u00F6ltek elt\u00E1vol\u00EDt\u00E1sa
 admin.action.save=v\u00E1ltoz\u00E1sok ment\u00E9se
 admin.caption.allowhtml=HTML enged\u00E9lyez\u00E9se
 admin.caption.allowjavascript=Javascript enged\u00E9lyez\u00E9se
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC meghajt\u00F3 oszt\u00E1ly
 admin.caption.databasepass=Adatb\u00E1zis jelsz\u00F3
 admin.caption.databasetype=Adatb\u00E1tis t\u00EDpus
