@@ -6,6 +6,7 @@ admin.action.remove=Elimina con contrassegno
 admin.action.save=Salva le Modifiche
 admin.caption.allowhtml=Permetti HTML
 admin.caption.allowjavascript=Allow Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=classe driver JDBC
 admin.caption.databasepass=Password del Database
 admin.caption.databasetype=Tipo del Database
