@@ -6,6 +6,7 @@ admin.action.remove=Gemarkeerde verwijderen
 admin.action.save=Wijzigingen opslaan
 admin.caption.allowhtml=HTML toestaan
 admin.caption.allowjavascript=Allow Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC driver klasse
 admin.caption.databasepass=Database paswoord
 admin.caption.databasetype=Database type
