@@ -6,6 +6,7 @@ admin.action.remove=Slett merkede
 admin.action.save=Lagre endringer
 admin.caption.allowhtml=Tillat HTML
 admin.caption.allowjavascript=Allow Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC driver-klasse
 admin.caption.databasepass=Database-passord
 admin.caption.databasetype=Database-type
