@@ -5,6 +5,7 @@ admin.action.remove=Usu\u0144 zaznaczone
 admin.action.save=Zapisz zmiany
 admin.caption.allowhtml=Zezwalaj na HTML
 admin.caption.allowjavascript=Zezwalaj na Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=Klasa sterownika JDBC
 admin.caption.databasepass=Has\u0142o bazy danych
 admin.caption.databasetype=Typ bazy danych
