@@ -6,6 +6,7 @@ admin.action.remove=Tag bort markerade
 admin.action.save=Spara \u00e4ndringar
 admin.caption.allowhtml=Till\u00e5t HTML
 admin.caption.allowjavascript=Allow Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC driver class
 admin.caption.databasepass=Databasl\u00f6senord
 admin.caption.databasetype=Databastyp
