@@ -6,6 +6,7 @@ admin.action.remove=\u5220\u9664\u6807\u8bb0
 admin.action.save=\u4fdd\u5b58\u66f4\u6539
 admin.caption.allowhtml=\u5141\u8bb8\u4f7f\u7528 HTML
 admin.caption.allowjavascript=\u5141\u8bb8\u4f7f\u7528 Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC\u9a71\u52a8\u7c7b
 admin.caption.databasepass=\u6570\u636e\u5e93\u5bc6\u7801
 admin.caption.databasetype=\u6570\u636e\u5e93\u7c7b\u578b
