@@ -6,6 +6,7 @@ admin.action.remove=\u522a\u9664\u6a19\u8a18
 admin.action.save=\u4fdd\u5b58\u66f4\u6539
 admin.caption.allowhtml=\u5141\u8a31\u4f7f\u7528 HTML
 admin.caption.allowjavascript=\u5141\u8a31\u4f7f\u7528 Javascript
+admin.caption.allowtemplates=Allow Wiki templates
 admin.caption.databasedriver=JDBC\u9a45\u52d5\u985e
 admin.caption.databasepass=\u6578\u64da\u5eab\u5bc6\u78bc
 admin.caption.databasetype=\u6578\u64da\u5eab\u985e\u578b
