@@ -4,6 +4,7 @@
 
 * FEATURE: Add support for Mediawiki templates (see 
   http://meta.wikimedia.org/wiki/Help:Templates).
+* FEATURE: Add option to enable/disable Mediawiki templates.
 * FEATURE: Replace file persistency mode with an embedded version of the
   HSQL database.
 * FEATURE: Require admin user login to perform an upgrade.
